# SatStash

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  run.sh  scheduler_daemon.py  sxm_app  sxm_cli.py  sxm_pro.py
docs/: CHEAT_SHEET.md  DVR_USAGE.md  README.md
scripts/: run_scheduler.sh
src/satstash/: __main__.py  channels.py  cli.py  config.py  player.py  session.py  tui.py
src/satstash.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/satstash/api/: __init__.py  client.py
src/satstash/auth/: direct.py
src/satstash/hls/: __init__.py  proxy.py  variants.py
src/satstash/usecases/: __init__.py  live.py  record.py
sxm/core/: api.py  auth.py  browser_session.py  hls_downloader.py  recorder.py  track_splitter.py
sxm/ui/: app.py  channel_browser.py  dvr_browser.py  login_screen.py  recording_library.py  recording_screen.py  screens.py  settings_screen.py
sxm/utils/: audio_recorder.py  channel_manager.py  config.py  hls_parser.py  recorder_integration.py  search.py  session_manager.py
